test/fixtures/golden/simplest/alpha.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: alpha
  name: alpha
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alpha
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: alpha
    spec:
      containers:
      - name: alpha
        image: docker.io/kayhide/enkuber:simplest-alpha
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          timeoutSeconds: 3
          successThreshold: 1
          failureThreshold: 10
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          timeoutSeconds: 15
          successThreshold: 1
          failureThreshold: 3
          initialDelaySeconds: 15
          periodSeconds: 10
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: alpha
  name: alpha
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: alpha
