test/fixtures/golden/simplest/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: ingress
  name: ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: alpha
          servicePort: 80
      - path: /beta
        backend:
          serviceName: beta
          servicePort: 80
